--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,17 @@
     height: 100%;
 }
 
+/* #header:hover .main_gnb {
+    border-top: 1px solid #ddd;
+    background: #fff;
+    transition: 0.5s;
+
+}
+
+#header:hover .main_gnb .inner .gnb ul {
+    color: #000;
+} */
+
 #header .top_gnb {
     font-size: 18px;
     font-weight: 500;
@@ -84,6 +95,12 @@
     font-size: 0;
 }
 
+/* #header:hover .main_gnb h1 img {
+    background: url(../img/main_bg_logo.png) no-repeat center center/cover;
+    z-index: 10001;
+} */
+
+
 #header .main_gnb .inner {
     display: flex;
     justify-content: space-between;
@@ -97,6 +114,11 @@
     font-weight: 500;
     color: #fff;
 }
+
+/* #header .main_gnb .inner .gnb ul li:hover {
+    color: #003569;
+} */
+
 
 #header .main_gnb .inner .right_icon img {
     height: 23px;
@@ -342,8 +364,10 @@
     top: 0;
     left: 0;
 
-    height: 500px;
+    height: 600px;
     overflow: hidden;
+
+    padding: 0 0 50px 0;
 }
 
 #quick::before {
@@ -384,6 +408,8 @@
 #quick .inner ul {
     display: flex;
     gap: 30px;
+
+    z-index: 5;
 }
 
 #quick .inner ul li {
@@ -395,10 +421,387 @@
     position: relative;
 }
 
-#quick .inner img {
+#quick .inner ul li:hover p::before {
+    content: "";
     position: absolute;
-    top: 30%;
-    left: 30%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    border-radius: 8px;
+    background-color: #e5eef6;
+    opacity: 1;
+    transition: opacity 0.2s;
+
+    z-index: -10;
 }
 
-#quick .inner p {}
+#quick .inner a figure {
+    height: 50px;
+    line-height: 150px;
+}
+
+#quick .inner a p {
+    position: absolute;
+    top: 200px;
+    left: 50%;
+    transform: translate(-50%, 0);
+
+    width: 150px;
+    font-size: 22px;
+    font-weight: 700;
+}
+
+#news {
+    padding: 50px 0;
+    background: #fdfaf7;
+    position: relative;
+}
+
+#news .bg {
+    position: absolute;
+    top: 25%;
+    left: 50px;
+
+    width: 350px;
+    height: 350px;
+
+    background: url(../img/news_title.png) no-repeat;
+
+    z-index: 0;
+
+    opacity: 0.5;
+}
+
+#news .inner .news_tab {
+    font-size: 25px;
+    font-weight: 500;
+
+    margin-bottom: 50px;
+
+    display: flex;
+    align-items: center;
+}
+
+#news .inner .news_tab strong {
+    width: 79px;
+    height: 79px;
+    background-color: #0054a6;
+    display: block;
+    color: #fff;
+    text-align: center;
+    line-height: 79px;
+    border-radius: 50%;
+
+    margin-right: 30px;
+}
+
+#news .inner .news_tab span {
+    margin-right: 50px;
+    color: #0054a6;
+
+    position: relative;
+}
+
+#news .inner .news_tab span~span::before {
+    content: "/";
+    position: absolute;
+    top: 0;
+    left: -30px;
+}
+
+#news .inner ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#news .inner ul li {
+    width: 350px;
+    margin-bottom: 50px;
+    margin-right: 50px;
+
+
+}
+
+#news .inner ul li a {
+    font-size: 24px;
+
+    line-height: 1.37;
+    font-size: 22px;
+    margin: 15px 0 15px;
+    height: 57px;
+    min-height: 57px;
+
+    display: -webkit-box;
+    overflow: hidden;
+    max-width: 100%;
+    color: #000;
+
+    letter-spacing: -0.035em;
+    text-overflow: ellipsis;
+    white-space: normal;
+    word-wrap: break-word;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+#news .inner ul li h3 {
+    font-size: 26px;
+    font-weight: 500;
+    color: #ea4c49;
+}
+
+#news .inner ul li h4 {
+    font-size: 26px;
+    font-weight: 500;
+    color: #1a94e6;
+}
+
+#news .inner ul li span {
+    color: #767676;
+    font-size: 17px;
+}
+
+#Career {
+    padding: 100px 0;
+}
+
+#Career .inner {
+    position: relative;
+}
+
+#Career .inner .left_img {
+    position: absolute;
+    top: 10%;
+    left: 0;
+    width: 420px;
+}
+
+#Career .inner .left_img img {
+    border-radius: 32px;
+
+    width: 100%;
+    height: 100%;
+
+}
+
+#Career .inner .right_img h2 {
+    position: absolute;
+    top: 100px;
+    right: 150px;
+
+    font-size: 78px;
+    font-weight: 600;
+    color: #fff;
+    letter-spacing: -0.035em;
+    line-height: 80px;
+    text-shadow: 3px 4px 10px rgb(0 0 0 / 20%);
+}
+
+#Career .inner .right_img p {
+    position: absolute;
+    top: 200px;
+    right: 150px;
+
+    margin-top: 6px;
+    font-size: 20px;
+    color: #fff;
+    letter-spacing: -0.035em;
+    text-shadow: 3px 4px 10px rgb(0 0 0 / 20%);
+}
+
+#Career .inner .right_img .line {
+    position: absolute;
+    top: 280px;
+    right: 150px;
+
+
+    width: 630px;
+    height: 1px;
+
+    background: #dadada;
+    opacity: 0.4;
+}
+
+#Career .inner .career_list {
+    position: absolute;
+    bottom: 50px;
+    right: 110px;
+}
+
+#Career .inner .career_list a {
+    position: relative;
+
+
+    display: inline-block;
+    width: 180px;
+    height: 180px;
+
+    margin-right: 30px;
+    padding-top: 111px;
+    border: 2px solid #fff;
+    border-radius: 43px;
+    font-size: 20px;
+    font-weight: 500;
+    color: #fff;
+    letter-spacing: -0.035em;
+    vertical-align: top;
+    text-align: center;
+    transition: 0.2s;
+}
+
+#Career .inner .career_list a:nth-child(1):before {
+    content: "";
+
+    position: absolute;
+    top: 44px;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: contain;
+
+    width: 46px;
+    height: 52px;
+    background: url(../img/career_icon01.svg) no-repeat;
+}
+
+#Career .inner .career_list a:hover:nth-child(1):before {
+    background: url(../img/career_icon01_hover.svg) no-repeat;
+
+}
+
+#Career .inner .career_list a:nth-child(1):hover {
+    color: #000;
+    background: #fff;
+}
+
+#Career .inner .career_list a:hover:nth-child(2):before {
+    background: url(../img/career_icon02_hover.svg) no-repeat;
+
+}
+
+#Career .inner .career_list a:nth-child(2):hover {
+    color: #000;
+    background: #fff;
+}
+
+#Career .inner .career_list a:hover:nth-child(3):before {
+    background: url(../img/career_icon03_hover.svg) no-repeat;
+
+}
+
+#Career .inner .career_list a:nth-child(3):hover {
+    color: #000;
+    background: #fff;
+}
+
+#Career .inner .career_list a:nth-child(2):before {
+    content: "";
+
+    position: absolute;
+    top: 44px;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: contain;
+
+    width: 58px;
+    height: 58px;
+    background: url(../img/career_icon02.svg) no-repeat;
+}
+
+#Career .inner .career_list a:nth-child(3):before {
+    content: "";
+
+    position: absolute;
+    top: 44px;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: contain;
+
+    width: 58px;
+    height: 58px;
+    background: url(../img/career_icon03.svg) no-repeat;
+}
+
+#footer {
+    background-color: #303642;
+
+    padding: 10px 0 50px 0;
+
+}
+
+#footer .inner .top_footer {
+    line-height: 80px;
+
+    display: flex;
+    justify-content: space-between;
+
+    color: rgb(226, 226, 226);
+
+    border-bottom: 1px solid #929292;
+
+    font-size: 18px;
+    font-weight: 500;
+}
+
+#footer .inner .top_footer .left_box span {
+    margin-right: 20px;
+
+}
+
+#footer .inner .top_footer .left_box .span01 {
+    color: #89b8f5;
+}
+
+#footer .inner .top_footer .left_box span:hover {
+    color: #89b8f5;
+}
+
+#footer .inner .top_footer .left_box a {
+    position: relative;
+}
+
+#footer .inner .top_footer .left_box a~a::before {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: -14px;
+
+    width: 5px;
+    height: 5px;
+    background: #fff;
+    border-radius: 50%;
+}
+
+#footer .inner .top_footer .icon_box {
+    display: flex;
+    gap: 20px;
+}
+
+#footer .inner .top_footer .icon_box a i {
+    padding: 5px;
+    background: #636363;
+    border-radius: 50%;
+
+    color: #fff;
+}
+
+#footer .inner .footer_info {
+    margin-top: 40px;
+}
+
+#footer .inner .footer_info .left_box {
+    display: flex;
+    gap: 30px;
+}
+
+#footer .inner .footer_info .left_box .text_box {
+    line-height: 30px;
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 17px;
+}
